add section headings

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>sleepy bird sounds</title>
 </head>
 <body>
-bird sounds
+Hello this is Liam's website,
 </body>
 </html>
+<h1>My Personal website</h1>
+<h2>My Community</h2>
+<h3>My Family</h3>
+<h3>My Friends</h3>
+<h2>My Hobbies</h2>
+<h3>My Favorite Music</h3>
+<h3>My Favorite Games</h3>
