add the paragraphs

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 
 <body>
     Hello this is Liam's website,
-    <h1>My Personal website</h1>
-    <h2>My Community</h2>
-    <h3>My Family</h3>
-    <h3>My Friends</h3>
+    <h1>My Personal website</h1><p>On this website you can listen to 50 different bird sounds, can even help you go to sleep</p>
+    <h2>My Community</h2><p>In my commuinty a lot of people are curious about what birds sound like, and i chose to solve that problem</p>
+    <h3>My Family</h3><p>since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what the majestic birds sound like.</p>
+    <h3>My Friends</h3><p>My friends and I,</p>
     <h2>My Hobbies</h2>
     <h3>My Favorite Music</h3>
     <h3>My Favorite Games</h3>
 </body>
-
 </html>
