--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <h2>My Hobbies</h2><p>I love waking up every morning and listening to the birds always sooths how i feel and can always be a great start to sieze the day.</p>
     <h3>My Favorite Music</h3><p>I love listening to bird sounds.</p>
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
-<audio controls src="audio/chilling.wav"></audio>
+<audio controls src="chilling.wav"></audio>
 </body>
 </html>
