--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <h3>My Favorite Music</h3><p>I love listening to bird sounds.</p>
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
 <audio controls src="chilling.wav"></audio>
+<img src="Petrusich-Dont-Mess-with-the-Birds"> 
 </body>
 </html>
