--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sleepy bird sounds</title>
+    <title>The Augie smeebus mullet</title>
 </head>
 
 <body>
     Hello this is Liam's website,
     <h1>My Personal website</h1><p>On this website you can listen to 50 different bird sounds, can even help you go to sleep.</p>
-    <h2>My Community</h2><p>In my commuinty a lot of people are curious about what birds sound like, and i chose to solve that problem.</p>
-    <h3>My Family</h3><p> Ever since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what the majestic birds sound like.</p>
+    <h2>My Community</h2><p>My dream since I was a kid was to become a Dj and this is a website that i can show beats to.</p>
+    <h3>My Family</h3><p> Ever since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what being a dj sounds like.</p>
     <ul>
         <li>.Me</li>
-        <li>.My brother</li>
+        <li>.My sister</li>
         <li>.My father</li>
         <li>.My mother</li>
     </ul>
-    <h3>My Friends</h3><p>I love to listen to bird sounds everytime beofre we go to sleep, now everyone can hear the sounds through this website.</p>
+    <h3>My Friends</h3><p>I love to listen to beats with  me and my friends everytime beofre we go to sleep, now everyone can hear the sounds through this website.</p>
     <ul>
     <li>Jtwizzle</li>
     <li>Justin Son</li>
     <li>Nicholas Sulivan Friedman</li>
+    <li>smeebus</li>
     </ul>
-    <h2>My Hobbies</h2><p>I love waking up every morning and listening to the birds always sooths how i feel and can always be a great start to sieze the day.</p>
+    <h2>My Hobbies</h2><p>I love waking up every morning and watching the sun rise and chasing my dream of becoming a dj.</p>
     <h3>My Favorite Music</h3><p>I love listening to bird sounds.</p>
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
 <audio controls src="chilling.wav"></audio>
