--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Augie smeebus mullet</title>
+    <title>The smeebus mullet way</title>
 </head>
 
 <body>
-    Hello this is Liam's website,
-    <h1>My Personal website</h1><p>On this website you can listen to 50 different bird sounds, can even help you go to sleep.</p>
-    <h2>My Community</h2><p>My dream since I was a kid was to become a Dj and this is a website that i can show beats to.</p>
-    <h3>My Family</h3><p> Ever since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what being a dj sounds like.</p>
+    Hello this is liam's website,
+    <h1>My Personal website</h1><p>On this website you can see what different birds are like, how rare they are and where there from, while reading about birds you also get to know what the community is like.</p>
+    <h2>My Community</h2><p>My dream since I was a kid was to become a major bird watch and this is a website that i can show beats to.</p>
+    <h3>My Family</h3><p> Ever since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what different bird's sound like.</p>
     <ul>
         <li>.Me</li>
         <li>.My sister</li>
         <li>.My father</li>
         <li>.My mother</li>
     </ul>
-    <h3>My Friends</h3><p>I love to listen to beats with  me and my friends everytime beofre we go to sleep, now everyone can hear the sounds through this website.</p>
+    <h3>My Friends</h3><p>I love to listen to beats and look at photos of birds with me and my friends everytime beofre we go to sleep, now everyone can hear the sounds through this website.</p>
     <ul>
     <li>Jtwizzle</li>
     <li>Justin Son</li>
