--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
     <h3>My Favorite Music</h3><p>I love listening to bird sounds.</p>
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
 <audio controls src="chilling.wav"></audio>
-<img src="Petrusich-Dont-Mess-with-the-Birds"> 
+<ul>
+<li>. The Peacock</li>
+<li>. The American Eagle</li>
+<li>. The pigeon</li>
+<li>. The Red Tailed Hawk</li>
+<li>. The Chicken</li>
+<li>. The Ostrich</li>
+<li>. The Parrot</li>
+<li>. The Flamingo</li>
+<li>. The Penguin</li>
+<li>. The Blue Jay</li>
+</ul>
 </body>
 </html>
