--- a/index.html
+++ b/index.html
@@ -30,16 +30,45 @@
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
 <audio controls src="chilling.wav"></audio>
 <ul>
-<li>. The Peacock</li>
-<li>. The American Eagle</li>
-<li>. The pigeon</li>
-<li>. The Red Tailed Hawk</li>
-<li>. The Chicken</li>
-<li>. The Ostrich</li>
-<li>. The Parrot</li>
-<li>. The Flamingo</li>
-<li>. The Penguin</li>
-<li>. The Blue Jay</li>
+    <li>. The Peacock</li>
+</ul>
+<img
+    src="peacock-3080897_640.jpg"
+    width="500" height="500"
+<ul>
+    <li>. The American Eagle</li>
+</ul>
+
+<ul>
+    <li>. The pigeon</li>
+</ul>
+
+<ul>
+    <li>. The Red Tailed Hawk</li>
+</ul>
+
+<ul>
+    <li>. The Chicken</li>
+</ul>
+
+<ul>
+    <li>. The Ostrich</li>
+</ul>
+
+<ul>
+    <li>. The Parrot</li>
+</ul>
+
+<ul>
+    <li>. The Flamingo</li>
+</ul>
+
+<ul>
+    <li>. The Penguin</li>
+</ul>
+
+<ul>
+    <li>. The Blue Jay</li>
 </ul>
 </body>
 </html>
