--- a/index.html
+++ b/index.html
@@ -34,23 +34,36 @@
 </ul>
 <img
     src="peacock-3080897_640.jpg"
-    width="500" height="500"
+    width="300" height="300"
+>
 <ul>
     <li>. The American Eagle</li>
 </ul>
-
+<img
+    src="adler-2386314_640.jpg"
+    width="300" height="300"
+>
 <ul>
     <li>. The pigeon</li>
 </ul>
-
+<img
+    src="dove-2186144-640.jpg"
+    width="300" height="300"
+>
 <ul>
     <li>. The Red Tailed Hawk</li>
 </ul>
-
+<img    
+    src="red-tail-hawk-3759227_640.jpg"
+    width="300"height="300"
+>
 <ul>
     <li>. The Chicken</li>
 </ul>
-
+<img
+    src="bird-349035_640.jpg"
+    width="300"height="300"
+>
 <ul>
     <li>. The Ostrich</li>
 </ul>
