--- a/index.html
+++ b/index.html
@@ -34,54 +34,70 @@
 </ul>
 <img
     src="peacock-3080897_640.jpg"
-    width="300" height="300"
+    width="640" height="300"
 >
 <ul>
     <li>. The American Eagle</li>
 </ul>
 <img
     src="adler-2386314_640.jpg"
-    width="300" height="300"
+    width="640"height="426"
 >
 <ul>
     <li>. The pigeon</li>
 </ul>
 <img
     src="dove-2186144-640.jpg"
-    width="300" height="300"
+    width="640"height="426"
 >
 <ul>
     <li>. The Red Tailed Hawk</li>
 </ul>
 <img    
     src="red-tail-hawk-3759227_640.jpg"
-    width="300"height="300"
+    width="640"height="426"
 >
 <ul>
     <li>. The Chicken</li>
 </ul>
 <img
     src="bird-349035_640.jpg"
-    width="300"height="300"
+    width="640"height="426"
 >
 <ul>
     <li>. The Ostrich</li>
 </ul>
-
+<img
+    src="ostrich-4995734_640.jpg"
+    width="640"height="425"
+>
 <ul>
     <li>. The Parrot</li>
 </ul>
-
+<img
+    src="bird-8165143_640.jpg"
+    width="640"height="423"
+>
 <ul>
     <li>. The Flamingo</li>
 </ul>
-
+<img
+    src="flamingo-7086655_640.jpg"
+    width="640"height="426"
+>
 <ul>
     <li>. The Penguin</li>
 </ul>
-
+<img
+    src="penguin-6905568_640.jpg"
+    width="640"height="360"
+>
 <ul>
     <li>. The Blue Jay</li>
 </ul>
+<img
+    src="bird-386725_640.jpg"
+    width="579"height="640"
+>
 </body>
 </html>
