--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <li>. The pigeon</li>
 </ul>
 <img
-    src="dove-2186144-640.jpg"
+    src="dove-2186144_640.jpg"
     width="640"height="426"
 >
 <ul>
