--- a/index.html
+++ b/index.html
@@ -30,35 +30,35 @@
     <h3>My Favorite Games</h3><p>Guessing bird sounds and bird watching.</p>
 <audio controls src="chilling.wav"></audio>
 <ul>
-    <li>. The Peacock</li>
+    <li>A peacock is the brightly colored, iridescent-plumed male of the peafowl family, known for its spectacular, long tail feathers, or train, featuring prominent eyespots that it fans out to attract a mate. These birds are members of the pheasant family, native to India and Sri Lanka, and are recognized by their distinctive head crests. While the male is known as a peacock, the female is a peahen, which is smaller and has a drab brown and green body lacking the elaborate train. The colorful display is due to the structural properties of the feathers, not pigments, causing the iridescent colors and a shimmering effect</li>
 </ul>
 <img
     src="peacock-3080897_640.jpg"
     width="640" height="300"
 >
 <ul>
-    <li>. The American Eagle</li>
+    <li>An "American eagle" is a bald eagle, a large bird of prey with a brown body, white head and tail, and yellow beak and feet, that serves as the national emblem and symbol of the United States. It was chosen to represent the country due to its powerful and independent nature, symbolizing strength and freedom</li>
 </ul>
 <img
     src="adler-2386314_640.jpg"
     width="640"height="426"
 >
 <ul>
-    <li>. The pigeon</li>
+    <li>An "American pigeon" is not a single species, but refers to several types of pigeons and doves found in North America. The most common are the non-native Rock Pigeon and the native Mourning Dove, but historically, the now-extinct Passenger Pigeon was the most prominent</li>
 </ul>
 <img
     src="dove-2186144_640.jpg"
     width="640"height="426"
 >
 <ul>
-    <li>. The Red Tailed Hawk</li>
+    <li>A red-tailed hawk is a large North American bird of prey (raptor) known for its broad wings, short tail, and a distinct reddish-brown tail on adults. It is a common sight in open fields, near woodlots, and even in urban areas across the continent, where it hunts small mammals, rodents, and reptiles to help control their populations. Red-tailed hawks are easily recognized by their raspy, screaming call, often heard in movies and television shows, and they play an important role in their ecosystems as top predators</li>
 </ul>
 <img    
     src="red-tail-hawk-3759227_640.jpg"
     width="640"height="426"
 >
 <ul>
-    <li>. The Chicken</li>
+    <li>A chicken is a domesticated bird, scientifically known as Gallus gallus domesticus, descended from the wild junglefowl of Asia. They are commonly raised worldwide for their meat, eggs, and feathers. Physically, they are characterized by short wings, a heavy, round body, and featherless legs, though they are poor fliers due to their build. Males are called roosters or cocks, while females are hens. Both sexes have fleshy combs on their heads and wattles on their throats, with roosters typically having more vibrant plumage and more pronounced combs and wattles</li>
 </ul>
 <img
     src="bird-349035_640.jpg"
