--- a/index.html
+++ b/index.html
@@ -99,5 +99,33 @@
     src="bird-386725_640.jpg"
     width="579"height="640"
 >
+<h3>About me</h3>
+<ul>
+    <li>My name is Augustine Franny Pribuss. My dream since i was a kid was to become a DJ if you scroll down you can see some of my beats! I have two cats and i love to give them cuddles, I also like to chase birds with my cats. If you were wondering what i look like this is what:</li>
+</ul>
+<img
+    src="auggie.jpg"
+    width="150"height="300"
+>
+<ul>
+    <li>This is what i look like when im 80. LOL!!!</li>
+</ul>
+<img
+    src="beast.jpg"
+    width="150"height="300"
+>
+<ul>
+    <li>this is what i look like after a killer pump in the gym!</li>
+</ul>
+<img
+    src="smeebus.jpg"
+    width="150"height="300"
+>
+<ul>
+    <li>Last photo i promise!!! This is me taking a slefie on selfie sunday!</li>
+</ul>
+<img
+    src="liamcoyle.jpg"
+    width="150"height="300"
 </body>
 </html>
