--- a/index.html
+++ b/index.html
@@ -65,35 +65,35 @@
     width="640"height="426"
 >
 <ul>
-    <li>. The Ostrich</li>
+    <li>. The ostrich is the world's largest and heaviest living bird, native to Africa's savannas and deserts. Though flightless, it is the fastest two-legged animal on Earth and is known for its remarkable speed and powerful kick.</li>
 </ul>
 <img
     src="ostrich-4995734_640.jpg"
     width="640"height="425"
 >
 <ul>
-    <li>. The Parrot</li>
+    <li>. Parrots, also known as psittacines, are highly intelligent birds found mostly in tropical and subtropical regions across the globe, especially in South America and Australasia. Known for their colorful feathers, strong curved beaks, and remarkable ability to mimic sounds, parrots are also exceptionally social and long-livedThe Parrot</li>
 </ul>
 <img
     src="bird-8165143_640.jpg"
     width="640"height="423"
 >
 <ul>
-    <li>. The Flamingo</li>
+    <li>. The flamingo is an unmistakable long-legged wading bird known for its brilliant pink and red plumage, a color derived from its diet. There are six recognized species of flamingo found in wetlands, lagoons, and salt lakes across the Americas, Africa, and Eurasia</li>
 </ul>
 <img
     src="flamingo-7086655_640.jpg"
     width="640"height="426"
 >
 <ul>
-    <li>. The Penguin</li>
+    <li>. The penguin is a group of flightless, aquatic birds native to the Southern Hemisphere. While known for their tuxedo-like black and white feathers and their distinctive waddle, they are powerfully adapted for life in the water. The 18 species of penguin range in size from the tiny little blue penguin to the majestic emperor penguin.</li>
 </ul>
 <img
     src="penguin-6905568_640.jpg"
     width="640"height="360"
 >
 <ul>
-    <li>. The Blue Jay</li>
+    <li>. The blue jay (Cyanocitta cristata) is a highly intelligent, crested songbird known for its bright blue, white, and black plumage and its noisy, assertive nature. Native to eastern and central North America, it is a member of the corvid family, which also includes crows and ravens</li>
 </ul>
 <img
     src="bird-386725_640.jpg"
@@ -105,27 +105,27 @@
 </ul>
 <img
     src="auggie.jpg"
-    width="150"height="300"
+    width="300"height="600"
 >
 <ul>
     <li>This is what i look like when im 80. LOL!!!</li>
 </ul>
 <img
     src="beast.jpg"
-    width="150"height="300"
+    width="300"height="600"
 >
 <ul>
     <li>this is what i look like after a killer pump in the gym!</li>
 </ul>
 <img
     src="smeebus.jpg"
-    width="150"height="300"
+    width="300"height="600"
 >
 <ul>
     <li>Last photo i promise!!! This is me taking a slefie on selfie sunday!</li>
 </ul>
 <img
     src="liamcoyle.jpg"
-    width="150"height="300"
+    width="300"height="600"
 </body>
 </html>
