--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     width="300"height="600"
 >
 <ul>
-    <li>Last photo i promise!!! This is me taking a slefie on selfie sunday!</li>
+    <li>Last photo i promise!!! This is me taking a selfie on selfie sunday!</li>
 </ul>
 <img
     src="liamcoyle.jpg"
