--- a/class_links.html
+++ b/class_links.html
@@ -13,7 +13,9 @@
     <hi>CLass Links</hi>
     <p>this page will contain links to some of my classmates' websites!</p>
         <ul>
-            <li>https://justinsonson.github.io/</li>
+            <li>
+                <a href="https://justinsonson.github.io/">Friggin Justin Website</a>
+            </li>
         </ul>
 </body>
 </html>
