--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     Hello this is liam's website,
     <h1>My Personal website</h1><p>On this website you can see what different birds are like, how rare they are and where there from, while reading about birds you also get to know what the community is like.</p>
-     <a href="class_links.html">class links</a>
+     <a href="class_links.html">Lumpkin Land</a>
      <p></p>
     <h2>My Community</h2><p>My dream since I was a kid was to become a major bird watch and this is a website that i can show beats to.</p>
     <h3>My Family</h3><p> Ever since I was a kid I have always wanted a pet chicken and my family didn't want one, now i can hear what different bird's sound like.</p>
