--- a/class_links.html
+++ b/class_links.html
@@ -14,6 +14,11 @@
     <p>this page will contain links to some of my classmates' websites!</p>
         <ul>
             <li>
+                <a href="index.html">Home Page</a>
+            </li>
+        </ul>
+    <ul>
+            <li>
                 <a href="https://justinsonson.github.io/">Friggin Justin Website</a>
             </li>
         </ul>
