--- a/index.html
+++ b/index.html
@@ -39,70 +39,70 @@
     <li>A peacock is the brightly colored, iridescent-plumed male of the peafowl family, known for its spectacular, long tail feathers, or train, featuring prominent eyespots that it fans out to attract a mate. These birds are members of the pheasant family, native to India and Sri Lanka, and are recognized by their distinctive head crests. While the male is known as a peacock, the female is a peahen, which is smaller and has a drab brown and green body lacking the elaborate train. The colorful display is due to the structural properties of the feathers, not pigments, causing the iridescent colors and a shimmering effect</li>
 </ul>
 <img
-    src="peacock-3080897_640.jpg"
-    width="640" height="300"
+    src="peacock-3080897_640.jpg" Alt="Peacock"
+    width="640"height="300"
 >
 <ul>
     <li>An "American eagle" is a bald eagle, a large bird of prey with a brown body, white head and tail, and yellow beak and feet, that serves as the national emblem and symbol of the United States. It was chosen to represent the country due to its powerful and independent nature, symbolizing strength and freedom</li>
 </ul>
 <img
-    src="adler-2386314_640.jpg"
+    src="adler-2386314_640.jpg" alt="Eagle"
     width="640"height="426"
 >
 <ul>
     <li>An "American pigeon" is not a single species, but refers to several types of pigeons and doves found in North America. The most common are the non-native Rock Pigeon and the native Mourning Dove, but historically, the now-extinct Passenger Pigeon was the most prominent</li>
 </ul>
 <img
-    src="dove-2186144_640.jpg"
+    src="dove-2186144_640.jpg" alt="Pigeon"
     width="640"height="426"
 >
 <ul>
     <li>A red-tailed hawk is a large North American bird of prey (raptor) known for its broad wings, short tail, and a distinct reddish-brown tail on adults. It is a common sight in open fields, near woodlots, and even in urban areas across the continent, where it hunts small mammals, rodents, and reptiles to help control their populations. Red-tailed hawks are easily recognized by their raspy, screaming call, often heard in movies and television shows, and they play an important role in their ecosystems as top predators</li>
 </ul>
 <img    
-    src="red-tail-hawk-3759227_640.jpg"
+    src="red-tail-hawk-3759227_640.jpg" alt="Hawk"
     width="640"height="426"
 >
 <ul>
     <li>A chicken is a domesticated bird, scientifically known as Gallus gallus domesticus, descended from the wild junglefowl of Asia. They are commonly raised worldwide for their meat, eggs, and feathers. Physically, they are characterized by short wings, a heavy, round body, and featherless legs, though they are poor fliers due to their build. Males are called roosters or cocks, while females are hens. Both sexes have fleshy combs on their heads and wattles on their throats, with roosters typically having more vibrant plumage and more pronounced combs and wattles</li>
 </ul>
 <img
-    src="bird-349035_640.jpg"
+    src="bird-349035_640.jpg" alt="baby chicken"
     width="640"height="426"
 >
 <ul>
     <li>. The ostrich is the world's largest and heaviest living bird, native to Africa's savannas and deserts. Though flightless, it is the fastest two-legged animal on Earth and is known for its remarkable speed and powerful kick.</li>
 </ul>
 <img
-    src="ostrich-4995734_640.jpg"
+    src="ostrich-4995734_640.jpg" alt="Ostrich"
     width="640"height="425"
 >
 <ul>
     <li>. Parrots, also known as psittacines, are highly intelligent birds found mostly in tropical and subtropical regions across the globe, especially in South America and Australasia. Known for their colorful feathers, strong curved beaks, and remarkable ability to mimic sounds, parrots are also exceptionally social and long-livedThe Parrot</li>
 </ul>
 <img
-    src="bird-8165143_640.jpg"
+    src="bird-8165143_640.jpg" alt="Parrot"
     width="640"height="423"
 >
 <ul>
     <li>. The flamingo is an unmistakable long-legged wading bird known for its brilliant pink and red plumage, a color derived from its diet. There are six recognized species of flamingo found in wetlands, lagoons, and salt lakes across the Americas, Africa, and Eurasia</li>
 </ul>
 <img
-    src="flamingo-7086655_640.jpg"
+    src="flamingo-7086655_640.jpg" alt="Flamingo"
     width="640"height="426"
 >
 <ul>
     <li>. The penguin is a group of flightless, aquatic birds native to the Southern Hemisphere. While known for their tuxedo-like black and white feathers and their distinctive waddle, they are powerfully adapted for life in the water. The 18 species of penguin range in size from the tiny little blue penguin to the majestic emperor penguin.</li>
 </ul>
 <img
-    src="penguin-6905568_640.jpg"
+    src="penguin-6905568_640.jpg" alt="penguin"
     width="640"height="360"
 >
 <ul>
     <li>. The blue jay (Cyanocitta cristata) is a highly intelligent, crested songbird known for its bright blue, white, and black plumage and its noisy, assertive nature. Native to eastern and central North America, it is a member of the corvid family, which also includes crows and ravens</li>
 </ul>
 <img
-    src="bird-386725_640.jpg"
+    src="bird-386725_640.jpg" alt="Blue Jay bird"
     width="579"height="640"
 >
 <h3>About me</h3>
@@ -110,28 +110,28 @@
     <li>My name is Augustine Franny Pribuss. My dream since i was a kid was to become a DJ if you scroll down you can see some of my beats! I have two cats and i love to give them cuddles, I also like to chase birds with my cats. If you were wondering what i look like this is what:</li>
 </ul>
 <img
-    src="auggie.jpg"
+    src="auggie.jpg" alt="Cute selfie"
     width="300"height="600"
 >
 <ul>
     <li>This is what i look like when im 80. LOL!!!</li>
 </ul>
 <img
-    src="beast.jpg"
+    src="beast.jpg" alt="grandpa"
     width="300"height="600"
 >
 <ul>
     <li>this is what i look like after a killer pump in the gym!</li>
 </ul>
 <img
-    src="smeebus.jpg"
+    src="smeebus.jpg" alt="mirror picture"
     width="300"height="600"
 >
 <ul>
     <li>Last photo i promise!!! This is me taking a selfie on selfie sunday!</li>
 </ul>
 <img
-    src="liamcoyle.jpg"
+    src="liamcoyle.jpg" 
     width="300"height="600"
 </body>
 </html>
