--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <li>Last photo i promise!!! This is me taking a selfie on selfie sunday!</li>
 </ul>
 <img
-    src="liamcoyle.jpg" 
+    src="liamcoyle.jpg" alt="selfie sunday"
     width="300"height="600"
 </body>
 </html>
