--- a/input_elements_challenge.html
+++ b/input_elements_challenge.html
@@ -68,11 +68,12 @@
         newsletter</label
       >
       <p>Pick a mode:</p>
-      <label><input type="radio" name="mode" value="Light" /> Light</label>
-      <label><input type="radio" name="mode" value="Dark" /> Dark</label>
       <label
-        ><input type="radio" name="mode" value="System" checked /> System</label
-      >
+        ><input type="radio" name="mode" id="lightmode" value="Light" /> Light</label>
+      <label
+        ><input type="radio" name="mode" id="darkmode" value="Dark" /> Dark</label>
+      <label
+      ><input type="radio" name="mode" id="systemmode" value="System" checked /> System</label>
       <button id="btnSubmit">Submit</button>
       <div class="output" id="modeOutput"></div>
     </section>
@@ -118,7 +119,10 @@
 
       btnSubmit.addEventListener("click", () => {
         // TODO: Find which radio button is checked and display it.
-        // Challenge: Include whether the user subscribed or not.
+        // Challenge: Include wheher the user subscribed or not.
+      const checked = document.getElementById(lightmode)
+      const checked = document.getElementById(darkmode)
+      const checked = document.getElementById(systemmode)
       });
     </script>
   </body>
