--- a/schmeebus_index.html
+++ b/schmeebus_index.html
@@ -5,9 +5,27 @@
   <title>Clicker with Paid Upgrades</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body { font-family: system-ui, sans-serif; display: grid; place-items: center; min-height: 100vh; margin: 0; }
-    .card { padding: 24px; border: 1px solid #ccc; border-radius: 12px; max-width: 400px; width: 90%; text-align: center; }
+    body {
+      font-family: system-ui, sans-serif;
+      display: grid;
+      place-items: center;
+      min-height: 100vh;
+      margin: 0;
+      background-size: cover;
+      background-position: center;
+      transition: background-image 0.5s ease-in-out;
+    }
+    .card {
+      padding: 24px;
+      border: 1px solid #ccc;
+      border-radius: 12px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+      background: rgba(255,255,255,0.85);
+    }
     h1 { margin: 0 0 12px; font-size: 24px; }
+    .stageName { font-size: 20px; font-weight: bold; margin-bottom: 12px; }
     .count { font-size: 48px; font-weight: 700; margin: 8px 0 16px; }
     .row { display: flex; gap: 12px; justify-content: center; flex-wrap: wrap; }
     button { padding: 10px 16px; font-size: 16px; border-radius: 8px; border: 1px solid #999; cursor: pointer; }
@@ -18,6 +36,7 @@
 <body>
   <div class="card">
     <h1>Clicker</h1>
+    <div class="stageName" id="stageName">Stage 1</div>
     <div class="count" id="count">0</div>
     <div class="row">
       <button id="click">Click (+1)</button>
@@ -29,12 +48,35 @@
 
   <script>
     const countEl = document.getElementById('count');
+    const stageNameEl = document.getElementById('stageName');
     const clickBtn = document.getElementById('click');
     const upgradeBtn = document.getElementById('upgrade');
     const resetBtn = document.getElementById('reset');
     const KEY = 'clicker-count';
     const POWER_KEY = 'clicker-power';
     const LEVEL_KEY = 'clicker-level';
+
+    // 👉 Customize your photos and names here
+    const stages = [
+      { name: "Stage 1: Schmidgen", photo: "url('photo1.jpg')" },
+      { name: "Stage 2: Schmleb", photo: "url('photo2.jpg')" },
+      { name: "Stage 3: Schmeeble", photo: "url('photo3.jpg')" },
+      { name: "Stage 4: ", photo: "url('photo4.jpg')" },
+      { name: "Stage 5: ", photo: "url('photo5.jpg')" },
+      { name: "Stage 6: Schm", photo: "url('photo6.jpg')" },
+      { name: "Stage 7: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 8: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 9: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 10: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 11: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 12: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 13: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 14: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 15: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 16: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 17: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 18: Grandmaster", photo: "url('photo6.jpg')" },
+    ];
 
     let count = Number(localStorage.getItem(KEY)) || 0;
     let clickPower = Number(localStorage.getItem(POWER_KEY)) || 1;
@@ -56,7 +98,12 @@
       if (count >= cost) {
         count -= cost;
         level++;
-        clickPower = Math.min(clickPower + 1, 100000);
+        clickPower = Math.min(clickPower * 2, 100000);
+
+        const stageIndex = (level - 1) % stages.length;
+        document.body.style.backgroundImage = stages[stageIndex].photo;
+        stageNameEl.textContent = stages[stageIndex].name;
+
         persist();
       } else {
         alert(`Not enough clicks! Need ${cost}.`);
@@ -67,6 +114,8 @@
       count = 0;
       clickPower = 1;
       level = 1;
+      document.body.style.backgroundImage = "";
+      stageNameEl.textContent = "Stage 1";
       persist();
     });
 
@@ -85,6 +134,13 @@
       countEl.textContent = count;
       clickBtn.textContent = `Click (+${clickPower})`;
       upgradeBtn.textContent = `Upgrade (Cost: ${getUpgradeCost(level)})`;
+
+      // Ensure correct stage shown on reload
+      const stageIndex = (level - 1) % stages.length;
+      if (stages[stageIndex]) {
+        document.body.style.backgroundImage = stages[stageIndex].photo;
+        stageNameEl.textContent = stages[stageIndex].name;
+      }
     }
   </script>
 </body>
