--- a/schmeebus_index.html
+++ b/schmeebus_index.html
@@ -57,24 +57,24 @@
     const LEVEL_KEY = 'clicker-level';
 
     const stages = [
-      { name: "Stage 1: Schmidgen", photo: "url('photo1.jpg')" },
-      { name: "Stage 2: Schmleb", photo: "url('photo2.jpg')" },
+      { name: "Stage 1: Schmidgen", photo: "url('smeebus.jpg')" },
+      { name: "Stage 2: Schmidge guitar", photo: "url('photo2.jpg')" },
       { name: "Stage 3: Schmeeble", photo: "url('photo3.jpg')" },
-      { name: "Stage 4: schmeeblet", photo: "url('photo4.jpg')" },
-      { name: "Stage 5: ", photo: "url('photo5.jpg')" },
-      { name: "Stage 6: Schm", photo: "url('photo6.jpg')" },
-      { name: "Stage 7: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 8: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 9: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 10: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 11: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 12: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 13: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 14: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 15: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 16: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 17: Grandmaster", photo: "url('photo6.jpg')" },
-      { name: "Stage 18: Grandmaster", photo: "url('photo6.jpg')" },
+      { name: "Stage 4: Schmeeblet", photo: "url('photo4.jpg')" },
+      { name: "Stage 5: Schmooger", photo: "url('photo5.jpg')" },
+      { name: "Stage 6: Schmix pack", photo: "url('smeebus.jpg')" },
+      { name: "Stage 7: Schmibble", photo: "url('auggie.jpg')" },
+      { name: "Stage 8: Schmisher man", photo: "url('aug.jpg')" },
+      { name: "Stage 9: Schmacker", photo: "url('photo6.jpg')" },
+      { name: "Stage 10: Schmiggle", photo: "url('photo6.jpg')" },
+      { name: "Stage 11: Schmogger", photo: "url('photo6.jpg')" },
+      { name: "Stage 12: Schmookie", photo: "url('photo6.jpg')" },
+      { name: "Stage 13: Schmini", photo: "url('photo6.jpg')" },
+      { name: "Stage 14: Schmleb", photo: "url('photo6.jpg')" },
+      { name: "Stage 15: Schmeedma", photo: "url('beast.jpg')" },
+      { name: "Stage 16: Schmaker", photo: "url('photo6.jpg')" },
+      { name: "Stage 17: Schmapper", photo: "url('photo6.jpg')" },
+      { name: "Stage 18: Schmeebus", photo: "url('photo6.jpg')" },
     ];
 
     let count = Number(localStorage.getItem(KEY)) || 0;
