--- a/schmeebus_index.html
+++ b/schmeebus_index.html
@@ -68,13 +68,13 @@
       { name: "Stage 9: Schmacker", photo: "url('4A48C539-670A-4162-BCD6-F93C078FFA19_1_201_a.jpeg')" },
       { name: "Stage 10: Schmiggle", photo: "url('462F589A-95BA-4E54-BAA2-A94314468AFE.heic')" },
       { name: "Stage 11: Schmogger", photo: "url('0406E94B-BBFF-4AD0-8F5B-2698FB6C0F66_1_105_c.jpeg')" },
-      { name: "Stage 12: Schmookie", photo: "url('photo6.jpg')" },
-      { name: "Stage 13: Schmini", photo: "url('photo6.jpg')" },
+      { name: "Stage 12: Schmookie", photo: "url('9BED21AD-BE5B-4407-BE3A-12C3CF0906B7_4_5005_c.jpeg')" },
+      { name: "Stage 13: Schmenry", photo: "url('26FB7A46-687A-4668-8E0C-939280C7C0EC_4_5005_c.jpeg')" },
       { name: "Stage 14: Schmleb", photo: "url('0120E6BD-E36C-4EED-A330-3A49F6426FB8_1_105_c.jpeg')" },
       { name: "Stage 15: Schmeedma", photo: "url('beast.jpg')" },
-      { name: "Stage 16: Schmaker", photo: "url('photo6.jpg')" },
-      { name: "Stage 17: Schmapper", photo: "url('photo6.jpg')" },
-      { name: "Stage 18: Schmeebus", photo: "url('photo6.jpg')" },
+      { name: "Stage 16: Schmarcteyrix", photo: "url('p862660D5-4082-468B-B0E3-2A8DD3EE38A2.jpeg')" },
+      { name: "Stage 17: Schmade", photo: "url('F18925A0-EE40-42BC-B872-B446B03AE2E6_4_5005_c.jpeg')" },
+      { name: "Stage 18: Schmeebus", photo: "url('B02578BA-4512-438E-91DF-36AD28E847E1.jpeg')" },
     ];
 
     let count = Number(localStorage.getItem(KEY)) || 0;
