--- a/schmeebus_index.html
+++ b/schmeebus_index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>Clicker with Paid Upgrades</title>
+  <title>Schmeebus Clicker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body {
@@ -58,15 +58,15 @@
 
     const stages = [
       { name: "Stage 1: Schmidgen", photo: "url('DD08A4D1-9588-4CF5-AC45-10294244A53D_1_105_c.jpeg')" },
-      { name: "Stage 2: Schmidge guitar", photo: "url('2899D563-B98C-4924-B1F0-D4B79DA21AB2.heic')" },
-      { name: "Stage 3: Schmeeble", photo: "url('60CB504D-E9A8-401B-80F4-D54618E993D7.heic')" },
+      { name: "Stage 2: Schmidge guitar", photo: "url('2899D563-B98C-4924-B1F0-D4B79DA21AB2.jpg')" },
+      { name: "Stage 3: Schmeeble", photo: "url('60CB504D-E9A8-401B-80F4-D54618E993D7.jpg')" },
       { name: "Stage 4: Schmeeblet", photo: "url('3A937A27-E439-4830-8884-0D024198EF85_1_105_c.jpeg')" },
-      { name: "Stage 5: Schmooger", photo: "url('F59FDC04-B5CC-4B4C-A516-4E74E4E5937D.heic')" },
+      { name: "Stage 5: Schmooger", photo: "url('F59FDC04-B5CC-4B4C-A516-4E74E4E5937D.jpg')" },
       { name: "Stage 6: Schmix pack", photo: "url('smeebus.jpg')" },
       { name: "Stage 7: Schmibble", photo: "url('auggie.jpg')" },
       { name: "Stage 8: Schmisher man", photo: "url('aug.jpg')" },
       { name: "Stage 9: Schmacker", photo: "url('4A48C539-670A-4162-BCD6-F93C078FFA19_1_201_a.jpeg')" },
-      { name: "Stage 10: Schmiggle", photo: "url('462F589A-95BA-4E54-BAA2-A94314468AFE.heic')" },
+      { name: "Stage 10: Schmiggle", photo: "url('462F589A-95BA-4E54-BAA2-A94314468AFE.jpg')" },
       { name: "Stage 11: Schmogger", photo: "url('0406E94B-BBFF-4AD0-8F5B-2698FB6C0F66_1_105_c.jpeg')" },
       { name: "Stage 12: Schmookie", photo: "url('9BED21AD-BE5B-4407-BE3A-12C3CF0906B7_4_5005_c.jpeg')" },
       { name: "Stage 13: Schmenry", photo: "url('26FB7A46-687A-4668-8E0C-939280C7C0EC_4_5005_c.jpeg')" },
