--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!DOCTYPE html>
 <head>
   <meta charset="UTF-8">
-  <title>Interactive Code Pop-up</title>
+  <title>Liam Loves Birds</title>
   <style>
     .code-card {
       display: inline-block;
